[package]
name = "router-eval-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zenoh = { git = "https://github.com/eclipse-zenoh/zenoh" }
# zenoh-protocol-core = { git = "https://github.com/eclipse-zenoh/zenoh" }
# zenoh = { path = "../../zenoh/zenoh" }
# zenoh-protocol-core = { path = "../../zenoh/commons/zenoh-protocol-core" }
async-std = { version = "=1.11.0", default-features = false, features = ["attributes"] }
anyhow = "1.0.57"
futures = "0.3.21"
clap = { version = "3.1.18", features = ["derive"] }
dhat = "0.3.0"
rand = "0.8.5"

[profile.release]
debug = 1

[features]
dhat-heap = []
